# lc-reasoner

./: README.md  build.sh  cabal.project  lc-reasoner.cabal
src/: Main.hs  Tutorial.hs
src/LC/: Reasoner.hs  Syntax.hs
src/LC/Syntax/: DeBruijn.hs  Named.hs
