cabal-version: 3.8

name: lc-reasoner
synopsis: Domain Reasoner for the λ-calculus, implemented using the IDEAS library.
version: 0.0.0.0
build-type: Simple

executable lc-reasoner
  default-language: GHC2021
  default-extensions:
    BlockArguments
    LambdaCase
    RecordWildCards
    ViewPatterns
    DerivingStrategies
    PatternSynonyms

  other-extensions:
    StrictData

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    LC.Syntax.Named
    LC.Syntax.DeBruijn
    LC.Reasoner
    Tutorial

  build-depends:
    base >=4.16 && <5
    , ideas
    , containers ^>= 0.6.7
    -- , async ^>= 2.2.5
    -- , directory ^>= 1.3.8
    -- , filepath ^>= 1.4.100
    -- , megaparsec ^>= 9.6.1
    -- , optparse-applicative ^>= 0.18.1
    -- , process ^>= 1.6.18
