cabal-version: 3.8

name: lc-reasoner
synopsis: Domain Reasoner for the λ-calculus, implemented using the IDEAS library.
version: 0.0.0.0
build-type: Simple

executable lc-reasoner
  default-language: GHC2021
  default-extensions:
    BlockArguments
    LambdaCase
    ViewPatterns

  other-extensions:
    StrictData

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Widentities
    -Wno-name-shadowing
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    LC.Syntax
    LC.Reasoner

  build-depends:
    base >=4.16 && <5
    , ideas
    , containers ^>= 0.6.7
